--- a/exercise-1/index.Rmd
+++ b/exercise-1/index.Rmd
@@ -25,28 +25,7 @@ data <- data %>%
         mutate(shots_fired = ifelse(is.na(shots_fired), mean(shots_fired, na.rm = T), shots_fired))
 
 #### From here down, you should make changes ####
-# Create a bubble map of the data
-g <- list(
-  scope = 'usa', 
-  projection = list(type = 'albers usa'),
-  showland = FALSE,
-  landcolor = toRGB("gray85"), 
-  subunitwidth = 1,
-  countrywidth = 0,
-  subunitcolor = toRGB("gray85"), 
-  countrycolor = toRGB('gray85')
-)
+source('scripts/build_map.R')
+build_map(data)
 
-
-# Create graph
-plot_ly(data, 
-        lon = lng, 
-        lat = lat, 
-        text = paste('<b>Name:</b>', data[,"Victim Name"], '<br><b>Shots Fired:</b>', data$shots_fired),
-        hoverinfo = 'text',
-        marker = list(size = 1 + shots_fired/3, opacity = .4, color = 'red'),
-        type = 'scattergeo', 
-        locationmode = 'USA-states'
-) %>%
-  layout(title = 'Crowdsourced Police Shootings', geo = g)
 ```
